--- a/index.html
+++ b/index.html
@@ -1,11 +1,2 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Hello, World!</title>
-</head>
-<body>
-
-  <h1>Hello, World!</h1>
-
-</body>
-</html>
+<!DoCTyPe hTmL>
+<html><head><title>Hello, World!</title></head><body><h1>Hello, World!</h1></body></html>
